--- a/portfolio.html
+++ b/portfolio.html
@@ -66,64 +66,82 @@
             <a href="">
             <img src="./img/portfolio/технокряк.jpg" alt="Технокряк-Веб-сайт" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Технокряк</h3>
-            <p class="portfolio-all-bottom">Веб-сайт</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Технокряк</h3>
+                <p class="portfolio-all-bottom">Веб-сайт</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/постерньюорлеан.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Постер <span lang="en">Orlean vs Golden Star</span> </h3>
-            <p class="portfolio-all-bottom">Дизайн</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Постер <span lang="en">Orlean vs Golden Star</span> </h3>
+                <p class="portfolio-all-bottom">Дизайн</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/ресторансифуд.jpg" alt="Ресторан Seafood" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Ресторан<span lang="en"> Seafood</span></h3>
-            <p class="portfolio-all-bottom">Приложение</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Ресторан<span lang="en"> Seafood</span></h3>
+                <p class="portfolio-all-bottom">Приложение</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/проектпрайм.jpg" alt="Проект Prime" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Проект<span lang="en"> Prime</span></h3>
-            <p class="portfolio-all-bottom">Маркетинг</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Проект<span lang="en"> Prime</span></h3>
+                <p class="portfolio-all-bottom">Маркетинг</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/проектбоксес.jpg" alt="Проект Boxes" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Проект <span lang="en"> Boxes</span></h3>
-            <p class="portfolio-all-bottom">Приложение</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Проект <span lang="en"> Boxes</span></h3>
+                <p class="portfolio-all-bottom">Приложение</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/инспирейшнхеснобордерс.jpg" alt="Inspiration has no Borders" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading"><span lang="en">Inspiration has no Borders</span></h3>
-            <p class="portfolio-all-bottom">Веб-сайт</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading"><span lang="en">Inspiration has no Borders</span></h3>
+                <p class="portfolio-all-bottom">Веб-сайт</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/изданиелимитедэдишн.jpg" alt="Издание Limited Edition" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Издание<span lang="en"> Limited Edition</span></h3>
-            <p class="portfolio-all-bottom">Дизайн</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Издание<span lang="en"> Limited Edition</span></h3>
+                <p class="portfolio-all-bottom">Дизайн</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/проджектлаб.jpg" alt="Проект LAB" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading">Проект <span lang="en" >LAB</span></h3>
-            <p class="portfolio-all-bottom">Маркетинг</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading">Проект <span lang="en" >LAB</span></h3>
+                <p class="portfolio-all-bottom">Маркетинг</p>
+            </div>
         </div>
         <div class="img-p">
             <a href="">
             <img src="./img/portfolio/гровингбазинс.jpg" alt="Growing Business" width="370" height="294">
             </a>
-            <h3 class="portfolio-item-heading"><span>Growing Business</span></h3>
-            <p class="portfolio-all-bottom">Приложение</p>
+            <div class="solid">
+                <h3 class="portfolio-item-heading"><span>Growing Business</span></h3>
+                <p class="portfolio-all-bottom">Приложение</p>
+            </div>
         </div>
     </section>
     <!-- contacts-footer -->
