--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
             <img src="./img/portfolio/постерньюорлеан.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
             </a>
             <div class="solid">
-                <h3 class="portfolio-item-heading">Постер <span lang="en">Orlean vs Golden Star</span> </h3>
+                <h3 class="portfolio-item-heading">Постер <span lang="en">New Orlean <span class="lowercase" lang="en">vs</span> Golden Star</span> </h3>
                 <p class="portfolio-all-bottom">Дизайн</p>
             </div>
         </div>
@@ -112,7 +112,7 @@
             <img src="./img/portfolio/инспирейшнхеснобордерс.jpg" alt="Inspiration has no Borders" width="370" height="294">
             </a>
             <div class="solid">
-                <h3 class="portfolio-item-heading"><span lang="en">Inspiration has no Borders</span></h3>
+                <h3 class="portfolio-item-heading"><span lang="en">Inspiration <span class="lowercase" lang="eu">has no</span> Borders</span></h3>
                 <p class="portfolio-all-bottom">Веб-сайт</p>
             </div>
         </div>
